scripts/monitor.err
C:\Users\gambi\Documents\Git\AraliaV4\Aralia\scripts\gemini_monitor.ts:2
import { GoogleGenerativeAI } from '@google/genai';
         ^

SyntaxError: The requested module '@google/genai' does not provide an export named 'GoogleGenerativeAI'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:220:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:321:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:644:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v22.17.0
